another gitignore for .suo file

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /PetStore/.vs/PetStore/FileContentIndex/a71d4a35-2181-4943-a4f3-81adec96f5b3.vsidx
 /PetStore/.vs/PetStore/FileContentIndex/ee44bdde-c1ac-40cd-82ec-bee5e949211f.vsidx
 /PetStore/.vs/PetStore/v17/TestStore/0/000.testlog
+/PetStore/.vs/PetStore/v17/.suo
